calling uppy programatically

--- a/package.json
+++ b/package.json
@@ -9,18 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "@tus/file-store": "^1.5.1",
+    "@tus/server": "^1.10.0",
+    "@uppy/compressor": "^2.1.0",
+    "@uppy/core": "^4.2.3",
+    "@uppy/dashboard": "^4.1.2",
+    "@uppy/react": "^4.0.3",
+    "@uppy/tus": "^4.1.4",
+    "next": "15.0.3",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "15.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3"
+    "typescript": "^5"
   }
 }
